# fwfr

./: .gitignore  CMakeLists.txt  README.md  benchmarking.py  build_pyfwfr_recipe.sh  install.sh
bindings/: Makefile  setup.py
bindings/pyfwfr/: __init__.py  _fwfr.pyx  fwfr.py
bindings/pyfwfr/includes/: libfwfr.pxd
bindings/pyfwfr/tests/: __init__.py  common.py  test_fwf.py  test_pyfwfr.py
bindings/pyfwfr/tests/testdata/: data.small.fwf
cmake-modules/: FindDoubleConversion.cmake
conda-recipes/pyfwfr/: build.sh  meta.yaml
data/: data.bigstrings.fwf  data.strings.fwf
generator/: gen.py
notebooks/: fwfr_sample_usage.ipynb
src/: CMakeLists.txt
src/fwfr/: SkipUTF8BOM.cpp  SkipUTF8BOM.h  api.h  chunker.cpp  chunker.h  column-builder.cpp  column-builder.h  converter.cpp  converter.h  options.cpp  options.h  parser.cpp  parser.h  reader.cpp  reader.h  test_reader.cpp  test_reader.h
tests/cpp-test/: CMakeLists.txt
tests/cpp-test/src/: test.cpp  test.h
tests/encodings-test/icu/: CMakeLists.txt  convert.cpp  guess_encoding.cpp
